correct table border and spacing between elements

--- a/css/style.css
+++ b/css/style.css
@@ -8,27 +8,36 @@ body {
 header {
     background-image: url(../img/pattern.png);
     background-color: #4EA0FF;
-    padding-top: 10%;
+    background-size: 300px;
+    padding-top: 8%;
     padding-left: 5%;
     padding-bottom: 1%;
 }
 
 #logo-header {
-    width: 20%;
+    width: 16%;
 }
 /* fine impostazioni header */
 
 /* impostazioni main */
 main {
-    margin-left: 5%;
-    margin-right: 5%;
+    width: 85%;
+    margin: auto;
 }
 /* impostazioni sezione foto iniziali */
+h1 {
+    margin-bottom: 0;
+}
+
 .author {
     color: gray;
 }
 
-.description {
+figure {
+    margin: 30px 0px;
+}
+
+figcaption {
     font-size: smaller;
 }
 
@@ -50,14 +59,7 @@ main {
 /* impostazioni tabella */
 table {
     border-collapse: collapse;
-}
-
-thead {
-    background-color: rgb(46, 158, 255);
-    color: white;
-    display: inline-block;
-    width: 32%;
-    text-align: left;
+    margin: 30px 0px;
 }
 
 .title {
@@ -79,14 +81,19 @@ thead {
     display: inline-block;
     width: 32%;
 }
-/* fine impostazioni tabella non tabella */
+
+ul {
+    margin-top: 30px;
+}
+/* fine impostazioni tabella */
 
 /* fine impostazioni main */
 
 /* impostazioni footer */
 footer {
-    margin-left: 5%;
-    margin-right: 5%;
+    width: 85%;
+    margin: auto;
+    padding: 30px 0px;
 }
 
 #footer {
@@ -96,6 +103,7 @@ footer {
 #link-1 {
     color: white;
     background-image: url(../img/monitor.jpg);
+    background-size: cover;
     padding-bottom: 13%;
     width: 22%;
 }
@@ -103,6 +111,7 @@ footer {
 #link-2 {
     color: white;
     background-image: url(../img/graph.jpg);
+    background-size: cover;
     padding-bottom: 13%;
     width: 22%;
 }
